--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do zero à Primeira Vaga</h1>
+        <small>15 de Maio de 2023</small>
+        <h1>Aula 01 - Primeiros Passos</h1>
         <div>
           <img
             src="assets/jornada.png"
@@ -52,8 +52,8 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do zero à Primeira Vaga</h1>
+        <small>16 de Maio de 2023</small>
+        <h1>Aula 02 - Descomplicando o Código</h1>
         <div>
           <img
             src="assets/jornada.png"
@@ -72,8 +72,8 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do zero à Primeira Vaga</h1>
+        <small>17 de Maio de 2023</small>
+        <h1>Aula 03 - Estilizando Nosso Layout</h1>
         <div>
           <img
             src="assets/jornada.png"
@@ -92,8 +92,28 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do zero à Primeira Vaga</h1>
+        <small>18 de Maio de 2023</small>
+        <h1>Aula 04 - Profissionalizando O Projeto</h1>
+        <div>
+          <img
+            src="assets/jornada.png"
+            alt="Rodrigo e Mayk apresentando o evento"
+          />
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+          numquam corrupti porro sequi laborum vero praesentium officiis vitae,
+          soluta provident officia ut neque deserunt ex iste accusantium ducimus
+          debitis dolore!
+        </p>
+      </a>
+      <a
+        href="https://www.youtube.com/watch?v=3nz5HkUJaVU"
+        target="_blank"
+        class="memory"
+      >
+        <small>19 de Maio de 2023</small>
+        <h1>Aula 05 - O Próximo Nível </h1>
         <div>
           <img
             src="assets/jornada.png"
